# lidarSymulation

./: .gitignore  CMakeLists.txt  Makefile  README.md
scripts/: build.sh  compile_and_run.sh  plot_first_data_point.py  read_lidar_temporal_data.py  train_conv_model.py  train_lstm.py  train_model.py
src/c/: data_generator.c  data_generator_temporal.c  lidar_denoiser_integration.c  lidar_system.c  main.c  rendering.c  test_c.c
src/cpp/: lidar_denoiser.cpp  lidar_denoiser_c.cpp  main.cpp
src/headers/: lidar_denoiser.h  lidar_denoiser_c.h  lidar_denoiser_integration.h  lidar_system.h  rendering.h
